# airdrop-intelligence

./: .env.example  .gitignore  README.md  main.py  project_memory.md  pyproject.toml
.github/workflows/: crawl.yml
data/: config.json  projects.json
scripts/: list_gemini_models.py
src/ai/: __init__.py  base.py  gemini_provider.py
src/crawler/: __init__.py  airdrops_io.py  base.py  galxe.py  layer3.py  zealy.py
src/models/: __init__.py  project.py
src/parser/: __init__.py  dedupe.py  normalizer.py
src/scorer/: __init__.py  base.py  rule_based.py
src/telegram/: __init__.py  notifier.py
src/utils/: config.py  history.py  http_client.py  json_store.py  logger.py
tests/: test_ai.py  test_crawler.py  test_history.py  test_main.py  test_models.py  test_parser.py  test_scorer.py  test_telegram.py
