[project]
name = "airdrop-intelligence"
version = "0.1.0"
description = "AI Research Assistant for airdrop hunters - crawl, score, and notify via Telegram."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.11",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
